[ FIX ] login align right

--- a/app/components/Navigation/ant.less
+++ b/app/components/Navigation/ant.less
@@ -1,3 +1,11 @@
 @import "~antd/dist/antd.less";
 
 @primary-color : #00a651;
+
+.right{
+    text-align: right;
+}
+.nav{
+    background: #fff;
+    width: 100%;
+}
